--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,5 +7,5 @@
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.github.acailuv.loanmanager.dashboard.DashboardFragment"
-        android:label="DashboardFragment" />
+        android:label="Home" />
 </navigation>
