--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/dashboardFragment"
         android:icon="@drawable/ic_home"
         android:title="@string/home" />
 
 
-    <item android:title="@string/your_cards">
+    <item android:title="@string/cards">
         <menu>
             <item
-                android:id="@+id/nav_add_credit_card"
+                android:id="@+id/addCardFragment"
                 android:icon="@drawable/ic_add"
                 android:title="@string/add_a_credit_card_profile" />
 
