--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,11 +3,14 @@
     <dimen name="padding">16dp</dimen>
     <dimen name="h1">32sp</dimen>
     <dimen name="h2">24sp</dimen>
+    <dimen name="h3">16sp</dimen>
     <dimen name="h1_marginTop">32dp</dimen>
     <dimen name="h1_marginBottom">8dp</dimen>
     <dimen name="h2_marginTop">32dp</dimen>
     <dimen name="h2_marginBottom">8dp</dimen>
-    <dimen name="p">18sp</dimen>
+    <dimen name="h3_marginTop">8dp</dimen>
+    <dimen name="h3_marginBottom">8dp</dimen>
+    <dimen name="p">14sp</dimen>
     <dimen name="margin">16dp</dimen>
     <dimen name="elevation">4dp</dimen>
 </resources>
