--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,6 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
     <style name="h1">
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">@dimen/h1</item>
@@ -25,6 +20,14 @@
         <item name="android:textSize">@dimen/h2</item>
         <item name="android:layout_marginBottom">@dimen/h2_marginBottom</item>
         <item name="android:layout_marginTop">@dimen/h2_marginTop</item>
+    </style>
+
+    <style name="h3">
+        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:textSize">@dimen/h3</item>
+        <item name="android:layout_marginBottom">@dimen/h3_marginBottom</item>
+        <item name="android:layout_marginTop">@dimen/h3_marginTop</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="p">
