--- a/app/src/main/res/layout/fragment_view_card.xml
+++ b/app/src/main/res/layout/fragment_view_card.xml
@@ -4,6 +4,9 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.github.acailuv.loanmanager.view_card.ViewCardFragmentViewModel" />
     </data>
 
     <LinearLayout
