--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -15,7 +15,7 @@
                 android:title="@string/add_a_credit_card_profile" />
 
             <item
-                android:id="@+id/view_card"
+                android:id="@+id/viewCardFragment"
                 android:icon="@drawable/ic_credit_card"
                 android:title="@string/view_credit_card_details" />
 
