--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -68,4 +68,22 @@
             app:destination="@id/viewCardFragment"
             app:popUpTo="@+id/dashboardFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/addInstallmentFragment"
+        android:name="com.github.acailuv.loanmanager.add_installment.AddInstallmentFragment"
+        android:label="Add an Installment"
+        tools:layout="@layout/fragment_add_installment">
+        <action
+            android:id="@+id/action_addInstallmentFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/viewInstallmentFragment"
+        android:name="com.github.acailuv.loanmanager.view_installment.ViewInstallmentFragment"
+        android:label="View Your Installments"
+        tools:layout="@layout/fragment_view_installment">
+        <action
+            android:id="@+id/action_viewInstallmentFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
 </navigation>
